// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminNavigation /> should render correctly - index 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c1 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 8rem;
  height: 2.2rem;
  margin-top: 3.34rem;
}

.c4 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  max-width: 25rem;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

<div>
  <div
    aria-label="Loading"
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with admin user 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c11 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c5 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c6 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c7 {
  padding: 2rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c9 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  display: none;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (min-width:32.25rem) {
  .c8 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c10 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Admin
      </h1>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        />
        <div
          class="c7"
        >
          <div
            aria-hidden="true"
            class="c8"
          >
            <div
              class="c9 date container"
            />
            <div
              class="c10"
            >
              <h1
                class="c11"
              >
                Site status
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        />
        <div
          class="c7"
        >
          <div
            aria-hidden="true"
            class="c8"
          >
            <div
              class="c9 date container"
            />
            <div
              class="c10"
            >
              <h1
                class="c11"
              >
                Debug settings
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        />
        <div
          class="c7"
        >
          <div
            aria-hidden="true"
            class="c8"
          >
            <div
              class="c9 date container"
            />
            <div
              class="c10"
            >
              <h1
                class="c11"
              >
                Analytics
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        />
        <div
          class="c7"
        >
          <div
            aria-hidden="true"
            class="c8"
          >
            <div
              class="c9 date container"
            />
            <div
              class="c10"
            >
              <h1
                class="c11"
              >
                Emails
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        />
        <div
          class="c7"
        >
          <div
            aria-hidden="true"
            class="c8"
          >
            <div
              class="c9 date container"
            />
            <div
              class="c10"
            >
              <h1
                class="c11"
              >
                Notifications
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        />
        <div
          class="c7"
        >
          <div
            aria-hidden="true"
            class="c8"
          >
            <div
              class="c9 date container"
            />
            <div
              class="c10"
            >
              <h1
                class="c11"
              >
                Users
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with auth error 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c6 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c5 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  margin: 0;
}

.c1 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 8rem;
  height: 2.2rem;
  margin-top: 3.34rem;
}

.c4 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  max-width: 25rem;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

<div>
  <div
    aria-label="Loading"
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
  <div
    class="c5"
  >
    <h1
      class="c6 c7"
      id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
    >
      This is taking a while. Maybe something isn't quite right...
    </h1>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with initial state 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c1 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 8rem;
  height: 2.2rem;
  margin-top: 3.34rem;
}

.c4 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  max-width: 25rem;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

<div>
  <div
    aria-label="Loading"
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with user 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c2 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c5 {
  margin: 0;
}

.c1 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  margin: 3.34rem 0 0 0;
}

.c4 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c4:first-of-type {
  margin-top: 0.86rem;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: white;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
        id="admin-only"
      >
        Admin only
      </h1>
      <span
        class="c4"
      >
        You need to be logged in with an admin account to view this content.
        <br />
        <span
          class="c5"
        >
          Got a different admin account? Log in here.
        </span>
      </span>
    </div>
  </div>
</div>
`;
